--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/ff9ac099ba.js"></script>
     <title>Weather</title>
   </head>
   <body>
     <div id="root"></div>
-
   </body>
 </html>
